@@ -8,6 +8,7 @@ core 2.1.2 - ???
 	* Change: Made TodoyuLabelManager::$cache private
 	* Change: Made TodoyuLabelManger::getFallbackLocales private
 	* Change: Comment out unused database relation input field (relations have their own sub fields)
+	* Change: Cleanup adding the language file for jscalendar
 	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
 	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
 	* Update: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
